trunk/Archive2/73/5baed820d12397/output
main.cpp:21:28: error: cannot refer to class template 'MyStruct' without a template argument list
    std::cout << "asdf" << MyStruct(3).equal(5) << std::endl;
                           ^
main.cpp:6:8: note: template is declared here
struct MyStruct {
       ^
1 error generated.
